--- a/tutorial2/tutorial2.ipynb
+++ b/tutorial2/tutorial2.ipynb
@@ -20,11 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "rGgKjuCxWTrc"
+    "id": "rGgKjuCxWTrc",
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -77,9 +78,83 @@
      "user_tz": -120
     },
     "id": "KCLYK8ZTSN0d",
-    "outputId": "1f3d1b29-0b30-44d5-83d1-9efaa901faab"
+    "outputId": "1f3d1b29-0b30-44d5-83d1-9efaa901faab",
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>area</th>\n",
+       "      <th>elevation</th>\n",
+       "      <th>population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Athens</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>170</td>\n",
+       "      <td>664046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bratislava</td>\n",
+       "      <td>367.6</td>\n",
+       "      <td>152</td>\n",
+       "      <td>429564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Copenhagen</td>\n",
+       "      <td>86.2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>602481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dublin</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>553165</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name   area  elevation  population\n",
+       "0      Athens   39.0        170      664046\n",
+       "1  Bratislava  367.6        152      429564\n",
+       "2  Copenhagen   86.2         14      602481\n",
+       "3      Dublin  115.0         20      553165"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cities = pd.DataFrame({\n",
     "  \"name\": [\"Athens\", \"Bratislava\", \"Copenhagen\", \"Dublin\"],\n",
@@ -104,10 +179,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>area</th>\n",
+       "      <th>elevation</th>\n",
+       "      <th>population</th>\n",
+       "      <th>Years</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Athens</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>170</td>\n",
+       "      <td>664046</td>\n",
+       "      <td>2025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bratislava</td>\n",
+       "      <td>367.6</td>\n",
+       "      <td>152</td>\n",
+       "      <td>429564</td>\n",
+       "      <td>2100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Copenhagen</td>\n",
+       "      <td>86.2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>602481</td>\n",
+       "      <td>2030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dublin</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>553165</td>\n",
+       "      <td>2016</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name   area  elevation  population  Years\n",
+       "0      Athens   39.0        170      664046   2025\n",
+       "1  Bratislava  367.6        152      429564   2100\n",
+       "2  Copenhagen   86.2         14      602481   2030\n",
+       "3      Dublin  115.0         20      553165   2016"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities[\"Years\"] = [2025,2100,2030,2016]\n",
+    "cities"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1045,7 +1203,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
